--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-
+/* banner */
 .banner {
     background-color: blue;
     height: 100vh;
@@ -62,10 +62,10 @@
     margin-top: 60px;
 }
 
-
-.section1 {
+/* section1 */
+.section1 ,.section2 {
     display: flex;
-    height: 350px;
+    height: 450px;
 }
 
 .section1 .right img {
@@ -95,9 +95,10 @@
 .section1 .left .button {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
-.left img {
+.section1 .left img {
     width: 150px;
 }
 
@@ -109,19 +110,12 @@
     flex: 1;
 }
 
-.section2 {
-    display: flex;
-    height: 350px;
-}
+/* section2 */
 
 .section2 .left img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.left , .right {
-    flex: 1;
 }
 
 .section2 .right {
@@ -140,7 +134,7 @@
 }
 
 .section2 .right p {
-    color:#848391;
+    color:#949298;
     line-height: 1.3;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 16px;
@@ -153,4 +147,74 @@
 .section2 .right .button {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
+
+/* section3 */
+
+.section3{
+    display: flex;
+    height: 650px;
+}
+
+.section3 .left img , .right img  {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* section4 */
+
+.client-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.client-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.testmonials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:#FFFBF8;
+}
+
+.testmonials h1 {
+    color:#A6A7AA;
+    margin-top: 150px;
+    margin-bottom: 50px;
+}
+
+.clients {
+    display: flex;
+}
+
+.clients .client1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 0.3;
+}
+
+.client1 .client-image {
+    margin-bottom: 30px;
+}
+
+.client1 p {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.client1 .details {
+    text-align: center;
+}
+
+
+
+
