--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -183,36 +183,63 @@
     flex-direction: column;
     align-items: center;
     background-color:#FFFBF8;
+    padding: 50px;
 }
 
 .testmonials h1 {
     color:#A6A7AA;
-    margin-top: 150px;
     margin-bottom: 50px;
 }
 
 .clients {
     display: flex;
+    justify-content: space-between;
 }
 
-.clients .client1 {
+.clients .client {
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 0.3;
 }
 
-.client1 .client-image {
+.client .client-image {
     margin-bottom: 30px;
 }
 
-.client1 p {
+.client p {
     text-align: center;
     margin-bottom: 30px;
+    color:#5F5F61;
+    line-height: 1.3;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.client1 .details {
+.client .details {
     text-align: center;
+}
+
+.client .details h2 {
+    color: #1A2934;
+    margin-bottom: 8px;
+}
+
+.client .details h4 {
+    color: #AFAEAC;
+}
+
+/* section5 */
+
+.section5 {
+    display: flex;
+}
+
+.section5 .image {
+    flex: 0.25;
+}
+
+.section5 .image img {
+    width: 100%;
 }
 
 
