--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -240,6 +240,54 @@
 
 .section5 .image img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* footer */
+
+.footer {
+    display: flex;
+    align-items: center;
+    background-color: #90D4C5;
+    height: 350px;
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.footer .logo{
+    margin-top: 70px;
+    color: #2E7766;
+}
+
+.footer .footer-navigation {
+    margin-top: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #65A99A;
+    cursor: pointer;
+}
+
+.footer-navigation span {
+    padding: 8px;
+}
+
+.footer-navigation span:hover {
+    color:#2D7465;  
+}
+
+.social {
+    margin-top: 70px;
+}
+
+.social img {
+    padding: 16px;
+    cursor: pointer;
+}
+
+.social img:hover{
+    color:#2D7465;  
 }
 
 
