--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -154,13 +154,55 @@
 
 .section3{
     display: flex;
-    height: 650px;
+    height: 450px;
 }
 
-.section3 .left img , .right img  {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.section3 .text-container {
+    width: 50%;
+}
+
+.section3 .left  {
+    background-image: url("../LandingPage/images/desktop/image-graphic-design.jpg");
+    background-position: center top;
+    background-size:cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+
+
+.section3 .left  p {
+    text-align: center;
+    color: #5B9589;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.section3 .left h1 {
+    color: #25584E;
+    margin-bottom: 20px;
+}
+
+.section3 .right h1 {
+    color: #1F546B;
+    margin-bottom: 20px;
+}
+
+.section3 .right p {
+    text-align: center;
+    color:#27769D;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.section3 .right  {
+    background-image: url("../LandingPage/images/desktop/image-photography.jpg");
+    background-position: center top;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 /* section4 */
@@ -290,20 +332,6 @@
     color:#2D7465;  
 }
 
-/* mobileFriendly */
-@media (max-width: 576.98px) { 
-
-    .section1 .section2 {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .section1 .left {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
- }
 
 
 
